Finalizando estrutura da seção benefits de insurance.html

--- a/insurance.html
+++ b/insurance.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/insurance/security.css">
-    
-
+    <link rel="stylesheet" href="./assets/css/insurance/benefits.css">
 </head>
 <body>
 <header class="header">
@@ -76,6 +75,43 @@
             </div>
         </div>
     </section>
+    <article class="benefits">
+        <div class="benefits--container container-1">
+            <h1 class="benefits__title title">nossas vantagens<span class="benefits__dot dot">.</span></h1>
+            <ul class="benefits__list">
+                <li class="benefits__item">
+                    <i class="benefits__icon icon icon--bike"></i>
+                    <h2 class="benefits__subtitle">Reparo Elétrico</h2>
+                    <p class="benefits__description">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
+                </li>
+                <li class="benefits__item">
+                    <i class="benefits__icon icon icon--carbon"></i>
+                    <h2 class="benefits__subtitle">Reparo Elétrico</h2>
+                    <p class="benefits__description">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
+                </li>
+                <li class="benefits__item">
+                    <i class="benefits__icon icon icon--plant"></i>
+                    <h2 class="benefits__subtitle">Sustentável</h2>
+                    <p class="benefits__description">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
+                </li>
+                <li class="benefits__item">
+                    <i class="benefits__icon icon icon--tracker"></i>
+                    <h2 class="benefits__subtitle">Recuperação</h2>
+                    <p class="benefits__description">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
+                </li>
+                <li class="benefits__item">
+                    <i class="benefits__icon icon icon--security"></i>
+                    <h2 class="benefits__subtitle">Segurança</h2>
+                    <p class="benefits__description">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
+                </li>
+                <li class="benefits__item">
+                    <i class="benefits__icon icon icon--speedometer"></i>
+                    <h2 class="benefits__subtitle">Rapidez</h2>
+                    <p class="benefits__description">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
+                </li>
+            </ul>
+        </div>
+    </article>
 </main>
 
 <footer class="footer">
