VISUALIZAR AS ALTERAÇÕES E APAGAR ESSE COMMIT

--- a/insurance.html
+++ b/insurance.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/insurance/security.css">
     <link rel="stylesheet" href="./assets/css/insurance/benefits.css">
+    <link rel="stylesheet" href="./assets/css/insurance/question.css">
 </head>
 <body>
 <header class="header">
@@ -132,22 +133,22 @@
                     <p class="questions__description">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                 </li>
                 <li class="questions__item">
-                    <i class="questions__icon icon icon--arrow--up"></i>
+                    <i class="questions__icon icon icon--arrow--down"></i>
                     <h2 class="questions__subtitle">Qual a garantia que possuo?</h2>
                     <p class="questions__description">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                 </li>
                 <li class="questions__item">
-                    <i class="questions__icon icon icon--arrow--up"></i>
+                    <i class="questions__icon icon icon--arrow--down"></i>
                     <h2 class="questions__subtitle">Posso parcelar no boleto?</h2>
                     <p class="questions__description">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                 </li>
                 <li class="questions__item">
-                    <i class="questions__icon icon icon--arrow--up"></i>
+                    <i class="questions__icon icon icon--arrow--down"></i>
                     <h2 class="questions__subtitle">Quantas trocas posso fazer ao ano?</h2>
                     <p class="questions__description">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                 </li>
                 <li class="questions__item">
-                    <i class="questions__icon icon icon--arrow--up"></i>
+                    <i class="questions__icon icon icon--arrow--down"></i>
                     <h2 class="questions__subtitle">Qual Bikcraft devo escolher para o meu tamanho?</h2>
                     <p class="questions__description">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                 </li>
