--- a/insurance.html
+++ b/insurance.html
@@ -118,39 +118,53 @@
             <h1 class="questions__title title">perguntas frequentes<span class="questions__dot dot">.</span></h1>
             <ul class="questions__list">
                 <li class="questions__item">
-                    <i class="questions__icon icon icon--arrow--up"></i>
-                    <h2 class="questions__subtitle">Qual forma de pagamento vocês aceitam?</h2>
+                    <div class="questions--container--item">
+                        <h2 class="questions__subtitle">Qual forma de pagamento vocês aceitam?</h2>
+                        <i class="questions__icon icon icon--arrow--up"></i>
+                    </div>
                     <p class="questions__description">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                 </li>
                 <li class="questions__item">
-                    <i class="questions__icon icon icon--arrow--down"></i>
-                    <h2 class="questions__subtitle">Como posso entrar em contato?</h2>
-                    <p class="questions__description">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                    <div class="questions--container--item">
+                        <h2 class="questions__subtitle">Como posso entrar em contato?</h2>
+                        <i class="questions__icon icon icon--arrow--down"></i>
+                    </div>
+                    <p class="questions__description questions__description--hide">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                 </li>
                 <li class="questions__item">
-                    <i class="questions__icon icon icon--arrow--down"></i>
-                    <h2 class="questions__subtitle">Vocês possuem algum desconto?</h2>
-                    <p class="questions__description">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                    <div class="questions--container--item">
+                        <h2 class="questions__subtitle">Vocês possuem algum desconto?</h2>
+                        <i class="questions__icon icon icon--arrow--down"></i>
+                    </div>
+                    <p class="questions__description questions__description--hide">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                 </li>
                 <li class="questions__item">
-                    <i class="questions__icon icon icon--arrow--down"></i>
-                    <h2 class="questions__subtitle">Qual a garantia que possuo?</h2>
-                    <p class="questions__description">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                    <div class="questions--container--item">
+                        <h2 class="questions__subtitle">Qual a garantia que possuo?</h2>
+                        <i class="questions__icon icon icon--arrow--down"></i>
+                    </div>
+                    <p class="questions__description questions__description--hide">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                 </li>
                 <li class="questions__item">
-                    <i class="questions__icon icon icon--arrow--down"></i>
-                    <h2 class="questions__subtitle">Posso parcelar no boleto?</h2>
-                    <p class="questions__description">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                    <div class="questions--container--item">
+                        <h2 class="questions__subtitle">Posso parcelar no boleto?</h2>
+                        <i class="questions__icon icon icon--arrow--down"></i>
+                    </div>
+                    <p class="questions__description questions__description--hide">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                 </li>
                 <li class="questions__item">
-                    <i class="questions__icon icon icon--arrow--down"></i>
-                    <h2 class="questions__subtitle">Quantas trocas posso fazer ao ano?</h2>
-                    <p class="questions__description">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                    <div class="questions--container--item">
+                        <h2 class="questions__subtitle">Quantas trocas posso fazer ao ano?</h2>
+                        <i class="questions__icon icon icon--arrow--down"></i>
+                    </div>
+                    <p class="questions__description questions__description--hide">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                 </li>
                 <li class="questions__item">
-                    <i class="questions__icon icon icon--arrow--down"></i>
-                    <h2 class="questions__subtitle">Qual Bikcraft devo escolher para o meu tamanho?</h2>
-                    <p class="questions__description">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                    <div class="questions--container--item">
+                        <h2 class="questions__subtitle">Qual Bikcraft devo escolher para o meu tamanho?</h2>
+                        <i class="questions__icon icon icon--arrow--down"></i>
+                    </div>
+                    <p class="questions__description questions__description--hide">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
                 </li>
             </ul>
         </div>
