Finalizando estrutura da seção introdution de terms.html

--- a/terms.html
+++ b/terms.html
@@ -28,7 +28,14 @@
     </div>
 </header>
 
-
+<main class="main">
+    <section class="introdution">
+        <div class="introdution--container container-1">
+            <p class="introdution__text">Termos de Uso</p>
+            <h1 class="introdution__title title">termos e condições <span class="introdution__dot dot">.</span></h1>
+        </div>
+    </section>
+</main>
 
 <footer class="footer">
     <div class="footer--container container-1">
