Criando e estilizando arquivo introdution.css de terms.html

--- a/terms.html
+++ b/terms.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./assets/css/utility.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
+    <link rel="stylesheet" href="./assets/css/terms/introdution.css">
+
 </head>
 <body>
 <header class="header">
