Finalizando estrutura da seção terms de terms.html

--- a/terms.html
+++ b/terms.html
@@ -37,6 +37,28 @@
             <h1 class="introdution__title title">termos e condições <span class="introdution__dot dot">.</span></h1>
         </div>
     </section>
+    <section class="terms">
+        <div class="terms--container container-1">
+            <div class="terms--container--card">
+                <h1 class="terms__title">1. Política de Estorno</h1>
+                <p class="terms__clause">1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                <p class="terms__clause">1.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                <p class="terms__clause">1.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+            </div>
+            <div class="terms--container--card">
+                <h1 class="terms__title">2. Conta do Usuário</h1>
+                <p class="terms__clause">1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                <p class="terms__clause">1.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                <p class="terms__clause">1.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+            </div>
+            <div class="terms--container--card">
+                <h1 class="terms__title">3. Seguro Bikcraft</h1>
+                <p class="terms__clause">1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                <p class="terms__clause">1.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+                <p class="terms__clause">1.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+            </div>
+        </div>
+    </section>
 </main>
 
 <footer class="footer">
