Finalizando estrutura da seção introdution de contact.html

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,12 @@
 </header>
 
 <main class="main">
-    
+    <section class="introdution">
+        <div class="introdution--container container-1">
+            <p class="introdution__text">Respostas em até 24H</p>
+            <h1 class="introdution__title title">nosso contanto<span class="introdution__dot dot">.</span></h1>
+        </div>
+    </section>
 </main>
 
 <footer class="footer">
