Finalizando estrutura da seção information em contact.html

--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,66 @@
             <h1 class="introdution__title title">nosso contanto<span class="introdution__dot dot">.</span></h1>
         </div>
     </section>
+    <article class="information">
+        <div class="information--container container-1">
+            <section class="information--container--card">
+                <div class="information--container--store">
+                    <h1 class="information__title">Loja online</h1>
+                    <ul class="information__list">
+                        <li class="information__item">
+                            <i class="information__icon icon icon--gps"></i>
+                            <address class="information__address">
+                                <span class="information__text">Rua Ali Perto, 35</span>
+                                <span class="information__text">Rio de Janeiro - RJ</span>
+                                <span class="information__text">Brasil - Terra - Vita Láctea</span>
+                            </address>
+                        </li>
+                        <li class="information__item">
+                            <i class="information__icon icon icon--mail"></i>
+                            <div class="information--container--texts">
+                                <p class="information__text">vendas@bikcraft.com</p>
+                                <p class="information__text">assistencia@bikcraft.com</p>
+                            </div>
+                        </li>
+                        <li class="information__item">
+                            <i class="information__icon icon icon--phone"></i>
+                            <p class="information__text">+55 21 9999-9999</p>
+                        </li>
+                        <li class="information__item">
+                            <i class="information__icon icon icon--instagram"></i>
+                            <i class="information__icon icon icon--facebook"></i>
+                            <i class="information__icon icon icon--youtube"></i>
+                        </li>
+                    </ul>
+                </div>
+                <div class="information--container--form">
+                    <form action="" class="information__form">
+                        <div class="information--container--name">
+                            <label for="name" class="information__label">Nome:</label>
+                            <input type="text" name="name" id="name" class="information__input" placeholder="Seu Nome">
+                        </div>
+
+                        <div class="information--container--cellphone">
+                            <label for="name" class="information__label">Telefone:</label>
+                            <input type="text" name="cellphone" id="cellphone" class="information__input" placeholder="Seu Telefone">
+                        </div>
+
+                        <div class="information--container--email">
+                            <label for="email" class="information__label">Email:</label>
+                            <input type="text" name="email" id="email" class="information__input" placeholder="Seu email">
+                        </div>
+
+                        <div class="information--container--message">
+                            <label for="message" class="information__label">Mensagem:</label>
+                            <input type="text" name="message" id="message">
+                        </div>
+
+                        <input type="button" value="Enviar Mensagem" class="information__button button">
+                    </form>
+                </div>
+            </section>
+        </div>
+    </article>
 </main>
 
 <footer class="footer">
