Adicionando link para arquivo icons.css

--- a/bicycles.html
+++ b/bicycles.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/utility.css">
     <link rel="stylesheet" href="./assets/css/header.css">
+    <link rel="stylesheet" href="./assets/css/icons.css">
     <link rel="stylesheet" href="./assets/css/bicycles/introdution.css">
     <link rel="stylesheet" href="./assets/css/bicycles/bicycles.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
