--- a/buy.html
+++ b/buy.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./assets/css/utility.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
+    <link rel="stylesheet" href="./assets/css/icons.css">
     <link rel="stylesheet" href="./assets/css/buy/choose.css">
     <link rel="stylesheet" href="./assets/css/buy/select.css">
     <link rel="stylesheet" href="./assets/css/buy/insurance.css">
