--- a/terms.html
+++ b/terms.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./assets/css/utility.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
+    <link rel="stylesheet" href="./assets/css/icons.css">
     <link rel="stylesheet" href="./assets/css/terms/introdution.css">
     <link rel="stylesheet" href="./assets/css/terms/terms.css">
 
