Removendo link com import e adicionando link para cada arquivo css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300;1,400;1,700;1,900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/utility.css">
+    <link rel="stylesheet" href="./assets/css/header.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
+    <link rel="stylesheet" href="./assets/css/icons.css">
+
+    <link rel="stylesheet" href="./assets/css/index/introdution.css">
+    <link rel="stylesheet" href="./assets/css/index/choose.css">
+    <link rel="stylesheet" href="./assets/css/index/technology.css">
+    <link rel="stylesheet" href="./assets/css/index/partners.css">
+    <link rel="stylesheet" href="./assets/css/index/review.css">
+    <link rel="stylesheet" href="./assets/css/index/insurance.css">
 </head>
 <body>
 <header class="header">
