--- a/terms.html
+++ b/terms.html
@@ -88,10 +88,10 @@
             <h1 class="footer__title">Informações</h1>
             <nav class="footer__nav">
                 <ul class="footer__list">
-                    <li class="footer__item"><a href="#" class="footer__link">Bicicletas</a></li>
-                    <li class="footer__item"><a href="#" class="footer__link">Seguros</a></li>
-                    <li class="footer__item"><a href="#" class="footer__link">Contato</a></li>
-                    <li class="footer__item"><a href="#" class="footer__link">Termos e Condições</a></li>
+                    <li class="footer__item"><a href="bicycles.html" class="footer__link">Bicicletas</a></li>
+                    <li class="footer__item"><a href="insurance.html" class="footer__link">Seguros</a></li>
+                    <li class="footer__item"><a href="contact.html" class="footer__link">Contato</a></li>
+                    <li class="footer__item"><a href="terms.html" class="footer__link">Termos e Condições</a></li>
                 </ul>
             </nav>
         </div>
