Adicionando o link no botão de comprar para a página quote.html

--- a/buy.html
+++ b/buy.html
@@ -49,7 +49,7 @@
                 <section class="choose--container--description">
                     <p class="choose__description">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
                     <div class="choose--container--button">
-                        <a href="#" class="choose__button button">Comprar Agora</a>
+                        <a href="quote.html" class="choose__button button">Comprar Agora</a>
                         <div class="choose--container--information">
                             <div class="choose--container--delivery">
                                 <i class="choose__icon icon icon--delivery"></i>
