Adicionando o link para a página quote nos botões de inscreva-se

--- a/insurance.html
+++ b/insurance.html
@@ -49,7 +49,7 @@
                             <li class="security__item">Suporte 08h às 18h</li>
                             <li class="security__item">Cobertura estadual</li>
                         </ul>
-                        <a href="security.html" class="security__button security__button--silver button">Inscreva-se</a>
+                        <a href="quote.html" class="security__button security__button--silver button">Inscreva-se</a>
                     </div>
                     <div class="security--container--price">
                         <span class="security__price">R$ 199</span>
@@ -67,7 +67,7 @@
                             <li class="security__item">Desconto em parceiros</li>
                             <li class="security__item">Acesso ao Clube Bikcraft</li>
                         </ul>
-                        <a href="security.html" class="security__button security__button--gold button">Inscreva-se</a>
+                        <a href="quote.html" class="security__button security__button--gold button">Inscreva-se</a>
                     </div>
                     <div class="security--container--price">
                         <span class="security__price">R$ 299</span>
